--- a/reference.bib
+++ b/reference.bib
@@ -805,6 +805,14 @@
   number  = {5}
 }
 
+@article{Engel2021,
+  title   = {Point transformer},
+  author  = {Engel, Nico and Belagiannis, Vasileios and Dietmayer, Klaus},
+  journal = {IEEE Access},
+  volume  = {9},
+  year    = {2021}
+}
+
 @article{Erhan2010,
   author  = {Dumitru Erhan and Yoshua Bengio and Aaron Courville and Pierre-Antoine Manzagol and Pascal Vincent and Samy Bengio},
   title   = {Why does unsupervised pre-training help deep learning?},
@@ -913,6 +921,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Girdhar2016,
   title     = {Learning a predictable and generative vector representation for objects},
   author    = {Girdhar, Rohit and Fouhey, David F and Rodriguez, Mikel and Gupta, Abhinav},
@@ -927,7 +936,6 @@
   booktitle = {International Conference on Artificial Intelligence and Statistics},
   year      = {2011}
 }
-
 
 @article{Golovinskiy2008,
   author  = {Golovinskiy, Aleksey and Funkhouser, Thomas},
@@ -982,6 +990,7 @@
   year      = 2018
 }
 
+
 @inproceedings{Grill2020,
   author    = {Jean-Bastien Grill and Florian Strub and Florent Altché and Corentin Tallec and Pierre H. Richemond and Elena Buchatskaya and Carl Doersch and BernardoAvila Pires and Zhaohan Daniel Guo and Mohammad Gheshlaghi Azar and Bilal Piot and Koray Kavukcuoglu and Rémi Munos and Michal Valko},
   title     = {Bootstrap Your Own Latent: A New Approach to Self-Supervised Learning},
@@ -996,7 +1005,6 @@
   booktitle = ICML,
   year      = {2020}
 }
-
 
 @inproceedings{Groueix2018,
   author    = {Thibault Groueix and Matthew Fisher and Vladimir G. Kim and Bryan C. Russell and Mathieu Aubry},
@@ -1584,13 +1592,13 @@
   year    = {2014}
 }
 
+
 @inproceedings{Klokov2017,
   author    = {Roman Klokov and Victor Lempitsky},
   title     = {Escape from cells: Deep Kd-networks for the recognition of {3D} point cloud models},
   booktitle = ICCV,
   year      = {2017}
 }
-
 
 @inproceedings{Kobbelt1998,
   author    = {Kobbelt, L. and Campagna, S. and Vorsatz, J. AND Seidel, H.-P.},
@@ -1698,6 +1706,7 @@
   year      = {2005}
 }
 
+
 @inproceedings{Lee2015,
   author    = {Donghoon Lee and Hyunsin Park and Yoo, C.D.},
   title     = {Face alignment using cascade Gaussian process regression trees},
@@ -1712,7 +1721,6 @@
   booktitle = ICML,
   year      = {2020}
 }
-
 
 @inproceedings{Levy2013,
   author    = {L\'{e}vy, Bruno and Bonneel, Nicolas},
@@ -1747,6 +1755,7 @@
   year      = {2016}
 }
 
+
 @article{Li2017,
   author  = {Li, Jun and Xu, Kai and Chaudhuri, Siddhartha and Yumer, Ersin and Zhang, Hao and Guibas, Leonidas},
   title   = {{GRASS}: Generative recursive autoencoders for shape structures},
@@ -1756,7 +1765,6 @@
   number  = {4},
   issn    = {0730-0301}
 }
-
 
 @inproceedings{Li2018,
   title     = {{PointCNN}: Convolution on X-transformed points},
@@ -1771,13 +1779,13 @@
   booktitle = CVPR,
   year      = 2018
 }
-
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
   title   = {Unsupervised detection of distinctive regions on {3D} shapes},
   journal = TOG,
   year    = {2020}
 }
+
 @article{Li2021,
   title   = {{SP-GAN}: Sphere-Guided {3D} Shape Generation and Manipulation},
   author  = {Li, Ruihui and Li, Xianzhi and Hui, Ke-Hei and Fu, Chi-Wing},
@@ -1845,6 +1853,13 @@
   author    = {Yongcheng Liu and Bin Fan and Shiming Xiang and Chunhong Pan},
   booktitle = CVPR,
   title     = {Relation-shape convolutional neural network for point cloud analysis},
+  year      = {2019}
+}
+
+@inproceedings{Liu2019a,
+  title     = {Point-Voxel {CNN} for Efficient {3D} Deep Learning},
+  author    = {Liu, Zhijian and Tang, Haotian and Lin, Yujun and Han, Song},
+  booktitle = NIPS,
   year      = {2019}
 }
 
@@ -2153,6 +2168,7 @@
   year      = {2019}
 }
 
+
 @article{Ohtake2003,
   author  = {Ohtake, Yutaka and Belyaev, Alexander and Alexa, Marc and Turk, Greg and Seidel, Hans-Peter},
   title   = {Multi-level partition of unity implicits},
@@ -2161,6 +2177,7 @@
   volume  = {22},
   number  = {3}
 }
+
 
 @article{Osada2002,
   author  = {Osada, Robert and Funkhouser, Thomas and Chazelle, Bernard and Dobkin, David},
@@ -2171,7 +2188,6 @@
   year    = {2002}
 }
 
-
 @article{Oztireli2009,
   title   = {Feature preserving point set surfaces based on non-linear kernel regression},
   author  = {{\"O}ztireli, A Cengiz and Guennebaud, Gael and Gross, Markus},
@@ -2180,7 +2196,6 @@
   number  = {2},
   year    = {2009}
 }
-
 
 @inproceedings{P.2004,
   author    = {BHAT, P. and INGRAM, S. AND TURK, G.},
@@ -2347,6 +2362,7 @@
   number  = {1}
 }
 
+
 @book{Redko2019,
   title     = {Advances in Domain Adaptation Theory},
   author    = {Ievgen Redko and Amaury Habrard and Emilie Morvant and Marc Sebban and Younès Bennani},
@@ -2360,7 +2376,6 @@
   booktitle = NIPS,
   year      = {2015}
 }
-
 
 @article{Ren2017,
   author  = {Ren, Mengwei and Niu, Liang and Fang, Yi},
@@ -2431,6 +2446,7 @@
   number  = {2}
 }
 
+
 @inproceedings{Sabour2017,
   title     = {Dynamic routing between capsules},
   author    = {Sabour, Sara and Frosst, Nicholas and Hinton, Geoffrey E},
@@ -2445,7 +2461,6 @@
   year    = {2015},
   volume  = {13}
 }
-
 
 @inproceedings{Sauder2019,
   author    = {Jonathan Sauder and Bjarne Sievers},
@@ -2516,6 +2531,7 @@
   number  = {4}
 }
 
+
 @article{Shapira2010,
   title   = {Contextual part analogies in {3D} objects},
   author  = {Shapira, Lior and Shalom, Shy and Shamir, Ariel and Cohen-Or, Daniel and Zhang, Hao},
@@ -2549,7 +2565,6 @@
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @inproceedings{Sharma2018,
   author    = {Gopal Sharma and Rishabh Goyal and Difan Liu and Evangelos Kalogerakis and Subhransu Maji},
@@ -2599,6 +2614,7 @@
   year    = {2015}
 }
 
+
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
   author  = {Shi, Bowen and Zhang, Xiaopeng and Xu, Haohang and Dai, Wenrui and Zou, Junni and Xiong, Hongkai and Tian, Qi},
@@ -2630,7 +2646,6 @@
   volume  = {30},
   number  = {6}
 }
-
 
 @inproceedings{Silva2002,
   author    = {Silva, Vin D and Tenenbaum, Joshua B},
@@ -2688,6 +2703,7 @@
   year   = {2014}
 }
 
+
 @inproceedings{Song2017,
   author    = {Song, Shuran and Yu, Fisher and Zeng, Andy and Chang, Angel X and Savva, Manolis and Funkhouser, Thomas},
   title     = {Semantic scene completion from a single depth image},
@@ -2702,7 +2718,6 @@
   url          = {https://modelnet.cs.princeton.edu/},
   year         = {2019}
 }
-
 
 @inproceedings{Sorkine2004,
   author    = {Sorkine, O. and Cohen-Or, D. and Lipman, Y. and Alexa, M. and R\"{o}ssl, C. and Seidel, H.-P.},
@@ -2773,6 +2788,7 @@
   number  = {5}
 }
 
+
 @article{Sun2008,
   author  = {Sun, Xin and Zhou, Kun and Stollnitz, Eric and Shi, Jiaoying and Guo, Baining},
   title   = {Interactive relighting of dynamic refractive objects},
@@ -2790,7 +2806,6 @@
   volume  = {71},
   number  = {2}
 }
-
 
 @article{Sun2009a,
   author       = {Sun, Jian and Ovsjanikov, Maks and Guibas, Leonidas},
@@ -2841,6 +2856,7 @@
   year    = {2019}
 }
 
+
 @inproceedings{Tancik2020,
   title     = {Fourier Features Let Networks Learn High Frequency Functions in Low Dimensional Domains},
   author    = {Matthew Tancik and Pratul P. Srinivasan and Ben Mildenhall and Sara Fridovich-Keil and Nithin Raghavan and Utkarsh Singhal and Ravi Ramamoorthi and Jonathan T. Barron and Ren Ng},
@@ -2855,7 +2871,6 @@
   year      = {2020}
 }
 
-
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
   title   = {{PolyCube-Maps}},
@@ -2864,6 +2879,7 @@
   volume  = {23},
   number  = {3}
 }
+
 
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
@@ -2878,7 +2894,6 @@
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @inproceedings{Tatarchenko2017,
   author    = {M. Tatarchenko and A. Dosovitskiy and T. Brox},
@@ -2929,6 +2944,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Tulsianiand2017,
   author    = {Shubham Tulsianiand and Hao Su and Leonidas J. Guibas and Alexei A. Efros and Jitendra Malik},
   title     = {Learning shape abstractions by assembling volumetric primitives},
@@ -2942,7 +2958,6 @@
   booktitle = threeDV,
   year      = {2017}
 }
-
 
 @inproceedings{Ulyanov2018,
   title     = {Deep image prior},
@@ -3126,10 +3141,10 @@
 }
 
 @inproceedings{Wang2020,
-  title   = {Deep Octree-based {CNNs} with Output-Guided Skip Connections for {3D} Shape and Scene Completion},
-  author  = {Wang, Peng-Shuai and Liu, Yang and Tong, Xin},
+  title     = {Deep Octree-based {CNNs} with Output-Guided Skip Connections for {3D} Shape and Scene Completion},
+  author    = {Wang, Peng-Shuai and Liu, Yang and Tong, Xin},
   booktitle = {CVPR Workshops},
-  year    = {2020}
+  year      = {2020}
 }
 
 @inproceedings{Wang2020a,
@@ -3176,12 +3191,14 @@
   number  = {1}
 }
 
+
 @inproceedings{Wei2016,
   author    = {Linyu Wei and Qixing Huang and Duygu Ceylan and Etienne Vouga and Hao Li},
   title     = {Dense human body correspondences using convolutional networks},
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @article{Wilhelms1992,
   author  = {Wilhelms, Jane and Van Gelder, Allen},
@@ -3192,7 +3209,6 @@
   number  = {3}
 }
 
-
 @article{Wu2005,
   author  = {Jianhua Wu and Leif Kobbelt},
   title   = {Structure recovery via hybrid variational surface approximation},
@@ -3201,7 +3217,6 @@
   volume  = {24},
   number  = {3}
 }
-
 
 @inproceedings{Wu2015,
   author    = {Wu, Zhirong and Song, Shuran and Khosla, Aditya and Yu, Fisher and Zhang, Linguang and Tang, Xiaoou and Xiao, Jianxiong},
@@ -3286,6 +3301,7 @@
   number  = {7}
 }
 
+
 @article{Xie2020,
   title   = {{PointContrast}: Unsupervised Pre-training for {3D} Point Cloud Understanding},
   author  = {Xie, Saining and Gu, Jiatao and Guo, Demi and Qi, Charles R. and Guibas, Leonidas J and Litany, Or},
@@ -3299,7 +3315,6 @@
   booktitle = CVPR,
   year      = {2021}
 }
-
 
 @article{Xu2012,
   author  = {Xu, Li and Yan, Qiong and Xia, Yang and Jia, Jiaya},
@@ -3376,6 +3391,7 @@
   year    = {2020}
 }
 
+
 @article{Yang2015,
   title   = {{Go-ICP}: A globally optimal solution to {3D ICP} point-set registration},
   author  = {Yang, Jiaolong and Li, Hongdong and Campbell, Dylan and Jia, Yunde},
@@ -3385,6 +3401,7 @@
   year    = {2015}
 }
 
+
 @inproceedings{Yang2017,
   author    = {Bo Yang and Hongkai Wen and Sen Wang and Ronald Clark and Andrew Markham and Niki Trigoni},
   title     = {{3D} object reconstruction from a single depth view with adversarial learning},
@@ -3392,14 +3409,12 @@
   year      = {2017}
 }
 
-
 @article{Yang2018,
   author  = {Yang, Bo and Rosa, Stefano and Markham, Andrew and Trigoni, Niki and Wen, Hongkai},
   title   = {Dense {3D} object reconstruction from a single depth view},
   journal = TPAMI,
   year    = {2018}
 }
-
 
 @inproceedings{Yang2018a,
   author    = {Yaoqing Yang and Chen Feng and Yiru Shen and Dong Tian},
@@ -3415,6 +3430,7 @@
   year    = {2020}
 }
 
+
 @article{Yi2016,
   author  = {Yi, Li and Kim, Vladimir G. and Ceylan, Duygu and Shen, I-Chao and Yan, Mengyan and Su, Hao and Lu, Cewu and Huang, Qixing and Sheffer, Alla and Guibas, Leonidas},
   title   = {A scalable active framework for region annotation in 3D shape collections},
@@ -3424,13 +3440,13 @@
   number  = {6}
 }
 
+
 @misc{Yi2017,
   author       = {Li Yi and Lin Shao and Manolis Savva and etal.},
   title        = {Large-scale {3D} shape reconstruction and segmentation from {ShapeNetCore55}},
   howpublished = {arXiv:1710.06104 [cs.CV]},
   year         = {2017}
 }
-
 
 @article{Yi2017a,
   author  = {Yi, Li and Guibas, Leonidas and Hertzmann, Aaron and Kim, Vladimir G. and Su, Hao and Yumer, Ersin},
@@ -3449,6 +3465,7 @@
   year      = {2017}
 }
 
+
 @article{Yin2018,
   author  = {Kangxue Yin and Hui Huang and Daniel Cohen-Or and Hao Zhang},
   title   = {{P2P-NET}: Bidirectional Point Displacement Net for Shape Transform},
@@ -3458,14 +3475,12 @@
   number  = {4}
 }
 
-
 @inproceedings{You2018,
   author    = {You, Haoxuan and Feng, Yifan and Ji, Rongrong and Gao, Yue},
   booktitle = {Proceedings of the 26th ACM international conference on Multimedia},
   title     = {{PVNet}: A joint convolutional network of point cloud and multi-view for {3D} shape recognition},
   year      = {2018}
 }
-
 
 @article{Yu2004,
   author  = {Yu, Yizhou and Zhou, Kun and Xu, Dong and Shi, Xiaohan and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
@@ -3504,12 +3519,14 @@
   year      = {2009}
 }
 
+
 @inproceedings{Zeiler2014,
   author    = {Matthew D. Zeiler and Rob Fergus},
   title     = {Visualizing and understanding convolutional networks},
   booktitle = ECCV,
   year      = {2014}
 }
+
 
 @inproceedings{Zeng2017,
   title     = {{3DMatch}: Learning local geometric descriptors from {RGBD} reconstructions},
@@ -3528,7 +3545,6 @@
   number  = {6}
 }
 
-
 @article{Zhang2012,
   author  = {Zhang, Juyong and Zheng, Jianmin and Wu, Chunlin and Cai, Jianfei},
   title   = {Variational mesh decomposition},
@@ -3538,13 +3554,13 @@
   number  = {3}
 }
 
-
 @inproceedings{Zhang2014,
   author    = {Zhang, Qi and Shen, Xiaoyong and Xu, Li and Jia, Jiaya},
   title     = {Rolling guidance filter},
   booktitle = {ECCV},
   year      = {2014}
 }
+
 
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
@@ -3563,7 +3579,6 @@
   volume  = {34},
   issue   = {7}
 }
-
 
 @inproceedings{Zhang2016,
   author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
@@ -3600,6 +3615,14 @@
   year      = {2021}
 }
 
+
+@article{Zhang2021a,
+  title   = {{PVT}: Point-Voxel Transformer for {3D} Deep Learning},
+  author  = {Zhang, Cheng and Wan, Haocheng and Liu, Shengqiang and Shen, Xinyi and Wu, Zizhao},
+  journal = {arXiv:2108.06076},
+  year    = {2021}
+}
+
 @inproceedings{Zhao2019,
   author    = {Zhao, Yongheng and Birdal, Tolga and Deng, Haowen and Tombari, Federico},
   booktitle = CVPR,
@@ -3613,7 +3636,6 @@
   title     = {Object Detection with a Unified Label Space from Multiple Datasets},
   year      = {2020}
 }
-
 
 @inproceedings{Zhao2021,
   title     = {Point transformer},
@@ -3630,6 +3652,7 @@
   volume  = {17},
   number  = {10}
 }
+
 
 @inproceedings{Zheng2013,
   author    = {Zheng, Bo and Zhao, Yibiao and Yu, Joey C. and Ikeuchi, Katsushi and Zhu, Song-Chun},
@@ -3653,7 +3676,6 @@
   volume  = {25},
   number  = {3}
 }
-
 
 @article{Zhou2011,
   author  = {Zhou, Kun and Gong, Minmin and Huang, Xin and Guo, Baining},
@@ -3699,8 +3721,6 @@
   year      = {2020},
   booktitle = CVPR
 }
-
-
 
 @inproceedings{Zou2017,
   author    = {Chuhang Zou and Ersin Yumer and Jimei Yang and Duygu Ceylan and Derek Hoiem},
