--- a/reference.bib
+++ b/reference.bib
@@ -2022,6 +2022,15 @@
   year      = {2021}
 }
 
+@article{Martel2021,
+  title   = {{ACORN}: {Adaptive} coordinate networks for neural scene representation},
+  author  = {Julien N. P. Martel and David B. Lindell and Connor Z. Lin and Eric R. Chan and Marco Monteiro and Gordon Wetzstein},
+  journal = SIG,
+  volume  = {40},
+  number  = {4},
+  year    = {2021}
+}
+
 @inproceedings{Masci2015,
   author    = {Jonathan Masci and Davide Boscaini and Michael M. Bronstein and Pierre Vandergheynst},
   title     = {Geodesic convolutional neural networks on Riemannian manifolds},
@@ -2370,6 +2379,7 @@
   publisher = {Elsevier}
 }
 
+
 @inproceedings{Ren2015,
   author    = {Shaoqing Ren and Kaiming He and Ross Girshick and Jian Sun},
   title     = {Faster {R-CNN}: Towards Real-Time Object Detection with Region Proposal Networks},
@@ -2453,6 +2463,7 @@
   booktitle = NIPS,
   year      = {2017}
 }
+
 
 @article{Sarbolandi2015,
   author  = {H. Sarbolandi and D. Lefloch and A. Kolb},
@@ -2540,6 +2551,7 @@
   year    = {2010}
 }
 
+
 @article{Sharf2004,
   author  = {Sharf, Andrei and Alexa, Marc and Cohen-Or, Daniel},
   title   = {Context-based Surface Completion},
@@ -2549,7 +2561,6 @@
   number  = {3}
 }
 
-
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
   author  = {Sharf, Andrei and Lewiner, Thomas and Shklarski, Gil and Toledo, Sivan and Cohen-Or, Daniel},
@@ -2558,6 +2569,7 @@
   number  = {3},
   year    = {2007}
 }
+
 
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
@@ -2622,13 +2634,13 @@
   year    = {2021}
 }
 
+
 @article{Shoef2019,
   author  = {Shoef, Matan and Fogel, Sharon and Cohen-Or, Daniel},
   title   = {{PointWise}: An unsupervised point-wise feature learning network},
   journal = {arXiv preprint arXiv:1901.04544},
   year    = {2019}
 }
-
 
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
@@ -2637,6 +2649,7 @@
   year    = {2016},
   volume  = {43}
 }
+
 
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
@@ -2710,6 +2723,7 @@
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @online{Song2019,
   author       = {Shuran Song},
@@ -2798,6 +2812,7 @@
   number  = {3}
 }
 
+
 @article{Sun2009,
   author  = {Xianfang Sun and Paul L. Rosin and Ralph R. Martin and Frank C. Langbein},
   title   = {Noise analysis and synthesis for {3D} laser depth scanners},
@@ -2864,6 +2879,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
   author    = {Tang, Haotian and Liu, Zhijian and Zhao, Shengyu and Lin, Yujun and Lin, Ji and Wang, Hanrui and Han, Song},
@@ -2887,6 +2903,7 @@
   booktitle = {Proc. of the conference on Visualization},
   year      = {2002}
 }
+
 
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -2951,6 +2968,7 @@
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @inproceedings{Uhrig2017,
   author    = {Jonas Uhrig and Nick Schneider and Lukas Schneider and Thomas Brox and Andreas Geiger},
@@ -3309,6 +3327,7 @@
   year    = {2020}
 }
 
+
 @inproceedings{Xie2021,
   title     = {{Propagate Yourself}: Exploring Pixel-Level Consistency for Unsupervised Visual Representation Learning},
   author    = {Xie, Zhenda and Lin, Yutong and Zhang, Zheng and Cao, Yue and Lin, Stephen and Hu, Han},
@@ -3457,7 +3476,6 @@
   number  = {4}
 }
 
-
 @inproceedings{Yi2017b,
   author    = {Li Yi and Hao Su and Xingwen Guo and Leonidas Guibas},
   title     = {{SyncSpecCNN}: Synchronized spectral {CNN} for {3D} shape segmentation},
@@ -3571,6 +3589,7 @@
   number  = {7}
 }
 
+
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
   title   = {Guided mesh normal filtering},
@@ -3630,6 +3649,7 @@
   year      = {2019}
 }
 
+
 @inproceedings{Zhao2020,
   author    = {Xiangyun Zhao and Samuel Schulter and Gaurav Sharma and Yi-Hsuan Tsai and Manmohan Chandraker and Ying Wu},
   booktitle = ECCV,
@@ -3667,6 +3687,7 @@
   booktitle = ICLR,
   year      = {2020}
 }
+
 
 @article{Zhou2006,
   author  = {Zhou, Kun and Huang, Xin and Wang, Xi and Tong, Yiying and Desbrun, Mathieu and Guo, Baining and Shum, Heung-Yeung},
@@ -3714,6 +3735,8 @@
   booktitle = ICCV,
   year      = {2017}
 }
+
+
 
 @inproceedings{Zhu2020,
   title     = {{AdaCoSeg}: Adaptive Shape Co-Segmentation with Group Consistency Loss},
