--- a/reference.bib
+++ b/reference.bib
@@ -835,8 +835,7 @@
   author    = {Fan, Haoqiang and Su, Hao and Guibas, Leonidas},
   title     = {A point set generation network for {3D} object reconstruction from a single image},
   booktitle = CVPR,
-  year      = {2017},
-  publiser  = {IEEE}
+  year      = {2017}
 }
 
 @inproceedings{Fanello2014,
@@ -922,13 +921,20 @@
 }
 
 
+@inproceedings{Gilmer2017,
+  title     = {Neural message passing for quantum chemistry},
+  author    = {Gilmer, Justin and Schoenholz, Samuel S and Riley, Patrick F and Vinyals, Oriol and Dahl, George E},
+  booktitle = ICML,
+  year      = {2017}
+}
+
+
 @inproceedings{Girdhar2016,
   title     = {Learning a predictable and generative vector representation for objects},
   author    = {Girdhar, Rohit and Fouhey, David F and Rodriguez, Mikel and Gupta, Abhinav},
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @inproceedings{Glorot2011,
   title     = {Deep sparse rectifier neural networks},
@@ -983,6 +989,7 @@
   year    = {2017}
 }
 
+
 @inproceedings{Graham2018,
   author    = {Benjamin Graham and Martin Engelcke and Laurens van der Maaten},
   title     = {{3D} semantic segmentation with submanifold sparse convolutional networks},
@@ -997,7 +1004,6 @@
   booktitle = NIPS,
   year      = {2020}
 }
-
 
 @inproceedings{Gropp2020,
   title     = {Implicit geometric regularization for learning shapes},
@@ -1585,13 +1591,13 @@
   year      = {2013}
 }
 
+
 @article{Kingma2014a,
   title   = {Adam: A method for stochastic optimization},
   author  = {Kingma, Diederik P. and Ba, Jimmy},
   journal = ICLR,
   year    = {2014}
 }
-
 
 @inproceedings{Klokov2017,
   author    = {Roman Klokov and Victor Lempitsky},
@@ -1699,6 +1705,7 @@
   number  = {99}
 }
 
+
 @inproceedings{Lee2005,
   author    = {Kai-Wah Lee and Wen-Ping Wang},
   title     = {Feature-preserving mesh denoising via bilateral normal filtering},
@@ -1713,7 +1720,6 @@
   booktitle = CVPR,
   year      = {2015}
 }
-
 
 @inproceedings{Lei2020,
   title     = {Analytic Marching: An Analytic Meshing Solution from Deep Implicit Surface Networks},
@@ -1748,13 +1754,13 @@
   number  = {4}
 }
 
+
 @inproceedings{Li2016,
   author    = {Yangyan Li and Soeren Pirk and Hao Su and Charles R. Qi and Leonidas J. Guibas},
   title     = {{FPNN}: field probing neural networks for {3D} data},
   booktitle = NIPS,
   year      = {2016}
 }
-
 
 @article{Li2017,
   author  = {Li, Jun and Xu, Kai and Chaudhuri, Siddhartha and Yumer, Ersin and Zhang, Hao and Guibas, Leonidas},
@@ -1772,13 +1778,13 @@
   booktitle = NIPS,
   year      = {2018}
 }
-
 @inproceedings{Li2018a,
   author    = {Jiaxin Li and Ben M. Chen and Gim Hee Lee},
   title     = {{SO-Net}: Self-organizing network for point cloud analysis},
   booktitle = CVPR,
   year      = 2018
 }
+
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
   title   = {Unsupervised detection of distinctive regions on {3D} shapes},
@@ -2170,6 +2176,7 @@
   year      = {2015}
 }
 
+
 @inproceedings{Oechsle2019,
   title     = {Texture fields: Learning texture representations in function space},
   author    = {Oechsle, Michael and Mescheder, Lars and Niemeyer, Michael and Strauss, Thilo and Geiger, Andreas},
@@ -2186,7 +2193,6 @@
   volume  = {22},
   number  = {3}
 }
-
 
 @article{Osada2002,
   author  = {Osada, Robert and Funkhouser, Thomas and Chazelle, Bernard and Dobkin, David},
@@ -2362,6 +2368,7 @@
   year    = 2020
 }
 
+
 @article{Ray2009,
   author  = {Ray, Nicolas and Vallet, Bruno and Alonso, Laurent and L\'{e}vy, Bruno},
   title   = {Geometry-aware direction field processing},
@@ -2378,7 +2385,6 @@
   year      = {2019},
   publisher = {Elsevier}
 }
-
 
 @inproceedings{Ren2015,
   author    = {Shaoqing Ren and Kaiming He and Ross Girshick and Jian Sun},
@@ -2447,6 +2453,7 @@
   issn    = {0377-0427}
 }
 
+
 @article{Roveri2018,
   author  = {Roveri, Riccardo and \"{O}ztireli, A. Cengiz and Pandele, Ioana and Gross, Markus},
   title   = {{PointProNets}: Consolidation of Point Clouds with Convolutional Neural Networks},
@@ -2463,7 +2470,6 @@
   booktitle = NIPS,
   year      = {2017}
 }
-
 
 @article{Sarbolandi2015,
   author  = {H. Sarbolandi and D. Lefloch and A. Kolb},
@@ -2533,6 +2539,7 @@
   year    = {2018}
 }
 
+
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
   title   = {Consistent mesh partitioning and skeletonisation using the shape diameter function},
@@ -2551,7 +2558,6 @@
   year    = {2010}
 }
 
-
 @article{Sharf2004,
   author  = {Sharf, Andrei and Alexa, Marc and Cohen-Or, Daniel},
   title   = {Context-based Surface Completion},
@@ -2561,6 +2567,7 @@
   number  = {3}
 }
 
+
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
   author  = {Sharf, Andrei and Lewiner, Thomas and Shklarski, Gil and Toledo, Sivan and Cohen-Or, Daniel},
@@ -2569,7 +2576,6 @@
   number  = {3},
   year    = {2007}
 }
-
 
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
@@ -2619,6 +2625,7 @@
   number  = {3}
 }
 
+
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
   title   = {{DeepPano}: Deep panoramic representation for {3D} shape recognition},
@@ -2634,13 +2641,13 @@
   year    = {2021}
 }
 
-
 @article{Shoef2019,
   author  = {Shoef, Matan and Fogel, Sharon and Cohen-Or, Daniel},
   title   = {{PointWise}: An unsupervised point-wise feature learning network},
   journal = {arXiv preprint arXiv:1901.04544},
   year    = {2019}
 }
+
 
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
@@ -2649,7 +2656,6 @@
   year    = {2016},
   volume  = {43}
 }
-
 
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
@@ -2665,6 +2671,13 @@
   title     = {Global versus local methods in nonlinear dimensionality reduction},
   booktitle = NIPS,
   year      = {2002}
+}
+
+@inproceedings{Simonovsky2017,
+  title     = {Dynamic edge-conditioned filters in convolutional neural networks on graphs},
+  author    = {Simonovsky, Martin and Komodakis, Nikos},
+  booktitle = CVPR,
+  year      = {2017}
 }
 
 @inproceedings{Sinha2016,
@@ -2702,12 +2715,14 @@
   year      = {2020}
 }
 
+
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
   title        = {Improved adversarial systems for {3D} object generation and reconstruction},
   howpublished = {arXiv:1707.09557 [cs.CV]},
   year         = {2017}
 }
+
 
 @unpublished{Solomon2014,
   author = {Solomon, Justin and Crane, Keenan and Butscher, Adrian and Wojtan, Chris},
@@ -2716,14 +2731,12 @@
   year   = {2014}
 }
 
-
 @inproceedings{Song2017,
   author    = {Song, Shuran and Yu, Fisher and Zeng, Andy and Chang, Angel X and Savva, Manolis and Funkhouser, Thomas},
   title     = {Semantic scene completion from a single depth image},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @online{Song2019,
   author       = {Shuran Song},
@@ -2763,13 +2776,6 @@
   year      = {2015}
 }
 
-@inproceedings{Su2017,
-  author    = {Hao Su and Haoqiang Fan and Leonidas Guibas},
-  title     = {A point set generation network for {3D} object reconstruction from a single image},
-  booktitle = CVPR,
-  year      = {2017}
-}
-
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
   title     = {{SPLATNet}: Sparse lattice networks for point cloud processing},
@@ -2784,6 +2790,7 @@
   year      = {2020}
 }
 
+
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
   title   = {Edge-preserving multiscale image decomposition based on local extrema},
@@ -2792,6 +2799,7 @@
   volume  = {28},
   number  = {5}
 }
+
 
 @article{Sun2007,
   author  = {Xianfang Sun and Rosin, P.~L. and Martin, R.~R. and Langbein, F.~C.},
@@ -2802,7 +2810,6 @@
   number  = {5}
 }
 
-
 @article{Sun2008,
   author  = {Sun, Xin and Zhou, Kun and Stollnitz, Eric and Shi, Jiaoying and Guo, Baining},
   title   = {Interactive relighting of dynamic refractive objects},
@@ -2811,7 +2818,6 @@
   volume  = {27},
   number  = {3}
 }
-
 
 @article{Sun2009,
   author  = {Xianfang Sun and Paul L. Rosin and Ralph R. Martin and Frank C. Langbein},
@@ -2857,6 +2863,7 @@
   number  = {5}
 }
 
+
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
   author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
@@ -2864,13 +2871,13 @@
   booktitle = CVPR
 }
 
+
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
   author  = {Tan, Hao and Bansal, Mohit},
   journal = {arXiv preprint arXiv:1908.07490},
   year    = {2019}
 }
-
 
 @inproceedings{Tancik2020,
   title     = {Fourier Features Let Networks Learn High Frequency Functions in Low Dimensional Domains},
@@ -2887,6 +2894,7 @@
   year      = {2020}
 }
 
+
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
   title   = {{PolyCube-Maps}},
@@ -2896,14 +2904,12 @@
   number  = {3}
 }
 
-
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
   title     = {Geometric surface smoothing via anisotropic diffusion of normals},
   booktitle = {Proc. of the conference on Visualization},
   year      = {2002}
 }
-
 
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -2947,12 +2953,14 @@
   year      = {2017}
 }
 
+
 @inproceedings{Tomasi1998,
   author    = {C. Tomasi and R. Manduchi},
   title     = {Bilateral filtering for gray and color images},
   booktitle = ICCV,
   year      = {1998}
 }
+
 
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
@@ -2961,14 +2969,12 @@
   year      = {2017}
 }
 
-
 @inproceedings{Tulsianiand2017,
   author    = {Shubham Tulsianiand and Hao Su and Leonidas J. Guibas and Alexei A. Efros and Jitendra Malik},
   title     = {Learning shape abstractions by assembling volumetric primitives},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @inproceedings{Uhrig2017,
   author    = {Jonas Uhrig and Nick Schneider and Lukas Schneider and Thomas Brox and Andreas Geiger},
@@ -3193,12 +3199,14 @@
   year      = {2021}
 }
 
+
 @misc{Warehouse2018,
   author = {3D Warehouse},
   title  = {{3D Warehouse}},
   year   = {2018},
   url    = {https://3dwarehouse.sketchup.com/?hl=en}
 }
+
 
 @article{Wei2015,
   author  = {Mingqiang Wei and Jinze Yu and Wai-Man Pang and Jun Wang and Jing Qin and Ligang Liu and Pheng-Ann Heng},
@@ -3209,14 +3217,12 @@
   number  = {1}
 }
 
-
 @inproceedings{Wei2016,
   author    = {Linyu Wei and Qixing Huang and Duygu Ceylan and Etienne Vouga and Hao Li},
   title     = {Dense human body correspondences using convolutional networks},
   booktitle = CVPR,
   year      = {2016}
 }
-
 
 @article{Wilhelms1992,
   author  = {Wilhelms, Jane and Van Gelder, Allen},
@@ -3303,12 +3309,14 @@
   year    = {2021}
 }
 
+
 @article{Xiao2021,
   title   = {Early convolutions help transformers see better},
   author  = {Xiao, Tete and Singh, Mannat and Mintun, Eric and Darrell, Trevor and Doll{\'a}r, Piotr and Girshick, Ross},
   journal = NIPS,
   year    = {2021}
 }
+
 
 @article{Xie2015,
   author  = {Xie, Zhige and Xu, Kai and Shan, Wen and Liu, Ligang and Xiong, Yueshan and Huang, Hui},
@@ -3319,14 +3327,12 @@
   number  = {7}
 }
 
-
 @article{Xie2020,
   title   = {{PointContrast}: Unsupervised Pre-training for {3D} Point Cloud Understanding},
   author  = {Xie, Saining and Gu, Jiatao and Guo, Demi and Qi, Charles R. and Guibas, Leonidas J and Litany, Or},
   journal = ECCV,
   year    = {2020}
 }
-
 
 @inproceedings{Xie2021,
   title     = {{Propagate Yourself}: Exploring Pixel-Level Consistency for Unsupervised Visual Representation Learning},
@@ -3396,6 +3402,7 @@
   year      = {2006}
 }
 
+
 @inproceedings{Yan2016,
   author    = {Xinchen Yan and Jimei Yang and Ersin Yumer and Yijie Guo and Honglak Lee},
   title     = {Perspective transformer nets: Learning single-view {3D} object reconstruction without {3D} supervision},
@@ -3403,13 +3410,13 @@
   year      = {2016}
 }
 
+
 @article{Yan2020,
   title   = {{COVID-19} Chest {CT} Image Segmentation--A Deep Convolutional Neural Network Solution},
   author  = {Yan, Qingsen and Wang, Bo and Gong, Dong and Luo, Chuan and Zhao, Wei and Shen, Jianhu and Shi, Qinfeng and Jin, Shuo and Zhang, Liang and You, Zheng},
   journal = {arXiv preprint arXiv:2004.10987},
   year    = {2020}
 }
-
 
 @article{Yang2015,
   title   = {{Go-ICP}: A globally optimal solution to {3D ICP} point-set registration},
@@ -3419,7 +3426,6 @@
   number  = {11},
   year    = {2015}
 }
-
 
 @inproceedings{Yang2017,
   author    = {Bo Yang and Hongkai Wen and Sen Wang and Ronald Clark and Andrew Markham and Niki Trigoni},
@@ -3435,6 +3441,7 @@
   year    = {2018}
 }
 
+
 @inproceedings{Yang2018a,
   author    = {Yaoqing Yang and Chen Feng and Yiru Shen and Dong Tian},
   booktitle = CVPR,
@@ -3442,13 +3449,13 @@
   year      = {2018}
 }
 
+
 @article{Yang2020,
   title   = {Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
   author  = {Yang, Lei and Liu, Wenxi and Cui, Zhiming and Chen, Nenglun and Wang, Wenping},
   journal = ECCV,
   year    = {2020}
 }
-
 
 @article{Yi2016,
   author  = {Yi, Li and Kim, Vladimir G. and Ceylan, Duygu and Shen, I-Chao and Yan, Mengyan and Su, Hao and Lu, Cewu and Huang, Qixing and Sheffer, Alla and Guibas, Leonidas},
@@ -3459,13 +3466,13 @@
   number  = {6}
 }
 
-
 @misc{Yi2017,
   author       = {Li Yi and Lin Shao and Manolis Savva and etal.},
   title        = {Large-scale {3D} shape reconstruction and segmentation from {ShapeNetCore55}},
   howpublished = {arXiv:1710.06104 [cs.CV]},
   year         = {2017}
 }
+
 
 @article{Yi2017a,
   author  = {Yi, Li and Guibas, Leonidas and Hertzmann, Aaron and Kim, Vladimir G. and Su, Hao and Yumer, Ersin},
@@ -3482,7 +3489,6 @@
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @article{Yin2018,
   author  = {Kangxue Yin and Hui Huang and Daniel Cohen-Or and Hao Zhang},
@@ -3523,12 +3529,14 @@
   year      = {2019}
 }
 
+
 @inproceedings{Yu2021,
   title     = {{Lite-HRNet}: A Lightweight High-Resolution Network},
   author    = {Yu, Changqian and Xiao, Bin and Gao, Changxin and Yuan, Lu and Zhang, Lei and Sang, Nong and Wang, Jingdong},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Zaharescu2009,
   author    = {Zaharescu, A. and Boyer, E. and Varanasi, K. and Horaud, R.},
@@ -3545,14 +3553,12 @@
   year      = {2014}
 }
 
-
 @inproceedings{Zeng2017,
   title     = {{3DMatch}: Learning local geometric descriptors from {RGBD} reconstructions},
   author    = {Zeng, Andy and Song, Shuran and Nie{\ss}ner, Matthias and Fisher, Matthew and Xiao, Jianxiong and Funkhouser, Thomas},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @article{Zhang2010,
   author  = {Zhang, Hao and Van Kaick, Oliver and Dyer, Ramsay},
@@ -3563,6 +3569,7 @@
   number  = {6}
 }
 
+
 @article{Zhang2012,
   author  = {Zhang, Juyong and Zheng, Jianmin and Wu, Chunlin and Cai, Jianfei},
   title   = {Variational mesh decomposition},
@@ -3572,13 +3579,13 @@
   number  = {3}
 }
 
+
 @inproceedings{Zhang2014,
   author    = {Zhang, Qi and Shen, Xiaoyong and Xu, Li and Jia, Jiaya},
   title     = {Rolling guidance filter},
   booktitle = {ECCV},
   year      = {2014}
 }
-
 
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
@@ -3588,7 +3595,6 @@
   volume  = {21},
   number  = {7}
 }
-
 
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
@@ -3620,6 +3626,7 @@
   year      = {2019}
 }
 
+
 @inproceedings{Zhang2019a,
   author    = {Ling Zhang and Zhigang Zhu},
   booktitle = threeDV,
@@ -3649,13 +3656,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Zhao2020,
   author    = {Xiangyun Zhao and Samuel Schulter and Gaurav Sharma and Yi-Hsuan Tsai and Manmohan Chandraker and Ying Wu},
   booktitle = ECCV,
   title     = {Object Detection with a Unified Label Space from Multiple Datasets},
   year      = {2020}
 }
+
 
 @inproceedings{Zhao2021,
   title     = {Point transformer},
@@ -3688,7 +3695,6 @@
   year      = {2020}
 }
 
-
 @article{Zhou2006,
   author  = {Zhou, Kun and Huang, Xin and Wang, Xi and Tong, Yiying and Desbrun, Mathieu and Guo, Baining and Shum, Heung-Yeung},
   title   = {Mesh quilting for geometric texture synthesis},
@@ -3715,17 +3721,16 @@
 }
 
 @article{Zhou2018,
-  author     = {Qian-Yi Zhou and Jaesik Park and Vladlen Koltun},
-  title      = {{Open3D}: {A} Modern Library for {3D} Data Processing},
-  year       = {2018},
-  eprint     = {1801.09847},
-  eprinttype = {arxiv}
+  title   = {{Open3D}: A modern library for {3D} data processing},
+  author  = {Zhou, Qian-Yi and Park, Jaesik and Koltun, Vladlen},
+  journal = {arXiv:1801.09847},
+  year    = {2018}
 }
 
 @article{Zhou2021,
   title   = {Simple multi-dataset detection},
   author  = {Zhou, Xingyi and Koltun, Vladlen and Kr{\"a}henb{\"u}hl, Philipp},
-  journal = {arXiv preprint arXiv:2102.13086},
+  journal = {arXiv:2102.13086},
   year    = {2021}
 }
 
@@ -3735,8 +3740,6 @@
   booktitle = ICCV,
   year      = {2017}
 }
-
-
 
 @inproceedings{Zhu2020,
   title     = {{AdaCoSeg}: Adaptive Shape Co-Segmentation with Group Consistency Loss},
